# MineSweep

./: .gitignore  CMakeLists.txt  MineSweep.sln  README.md
MineSweep/: MineSweep.cpp  MineSweep.h  MineSweep.vcxproj  MineSweep.vcxproj.filters  ege.h  graphics.h  graphics.lib  main.cpp
ege/include/: ege.h  graphics.h
ege/include/ege/: button.h  egecontrolbase.h  fps.h  label.h
ege/lib/vs2015/: graphics.lib
ege/lib/vs2017/x86/: graphics.lib
ege/lib/vs2019/x86/: graphics.lib
